fixed footer alignment

--- a/styles.css
+++ b/styles.css
@@ -471,13 +471,16 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
 }
 
 .footer-txt {
     font-size: clamp(0.8rem, 2vw, 1.2rem);
     text-align: center;
-    padding-top: 1.5vw;
-    padding-right: 1vw;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
 
 }
 
@@ -586,6 +589,20 @@ footer {
 
     .venue-sect {
         padding-bottom: 0rem;
+    }
+
+    /* footer section */
+    .footer-logo {
+        width: 8vw;
+        height: auto;
+    }
+
+    .footer-cont {
+        padding-top: 1rem;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: .5rem;
     }
 
 }
